# terminus

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SESSION_HANDOFF.md  STORY.md  TERMINUS_LOGO_BRIEF.md  TERMINUS_STORY.md  pyproject.toml  release.py
terminus/: __init__.py  cli.py  fetch.py  filter.py  indicators.py  portfolio.py  registry.py  rules.py  simulate.py  store.py  sweep.py  telemetry.py  walk_forward.py
terminus/ml/: __init__.py  optim.py  regime.py
terminus/risk/: factor_model.py  metrics.py
tests/: test_factor_model.py  test_risk_metrics.py
