[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "terminus-lab"
version = "0.1.4"
description = "End of All Trades. Ruthless backtesting lab for long-only spot strategies."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Stronex Labs" },
]
requires-python = ">=3.10"
keywords = [
    "backtest", "crypto", "trading", "walk-forward", "spot",
    "halal", "shariah", "quantitative", "strategy",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "pandas-ta>=0.3.14b",
    "httpx>=0.25",
]

[project.optional-dependencies]
ml = ["xgboost>=2.0", "scikit-learn>=1.3", "httpx>=0.25"]
dev = ["pytest>=7", "pytest-asyncio>=0.21", "ruff>=0.1"]

[project.scripts]
terminus = "terminus.cli:main"

[project.urls]
Homepage = "https://github.com/Stronex-Labs/terminus"
Documentation = "https://github.com/Stronex-Labs/terminus/tree/main/docs"
Issues = "https://github.com/Stronex-Labs/terminus/issues"

[tool.setuptools.packages.find]
include = ["terminus*"]
exclude = ["tests*", "docs*", "examples*"]
